resolve overflow problem related to menu subindicator

--- a/css/laurel-ckeditor.css
+++ b/css/laurel-ckeditor.css
@@ -1160,6 +1160,33 @@ Not all link styles are defined in this file.
   background-color: var(--color-link-bg-active);
 }
 
+/*
+@mixin block-link(){
+  display: block;
+  text-decoration: none;
+  border-bottom: 1px solid var(--color-link-border-link);
+  &:link{
+    border-bottom: 1px solid var(--color-link-border-link);
+  }
+  &:visited{
+    border-bottom: 1px solid var(--color-link-border-visited);
+  }
+  &:focus{
+    color: var(--color-text);
+    border-bottom: 1px solid var(--color-link-border-focus);
+    outline: none;
+  }
+  &:hover{
+    color: $color-a1-navy;
+    border-bottom: 1px solid var(--color-link-block-border-hover);
+  }
+  &:active{
+    color: $color-white;
+    background-color: var(--color-link-bg-active);
+    border-bottom: 1px solid transparent;
+  }
+}
+*/
 /* line 4, ../../../../../Users/frankfarm/drupal8/docroot/themes/contrib/laurel/sass/_objects-links-icons-before-and-after.scss */
 .node a:focus:before {
   content: '';
