--- a/sass/_components-nav-menus-tabs.scss
+++ b/sass/_components-nav-menus-tabs.scss
@@ -55,6 +55,7 @@ ul.menu a.is-active:focus{
   --color-sfmenu-sub-indicator:            #{$color-j2-cool-gray};
   --color-sfmenu-sub-indicator-focus:      #{$color-white};
   --color-sfmenu-sub-indicator-hover:      #{$color-j4-cool-gray};
+  --color-sfmenu-ul-bg:                    #{$color-i5-navy};
 }
 @media (prefers-color-scheme: dark) {
   :root{
@@ -64,6 +65,7 @@ ul.menu a.is-active:focus{
     --color-sfmenu-sub-indicator:            #{$color-j2-cool-gray};
     --color-sfmenu-sub-indicator-focus:      #{$color-b5-blue};
     --color-sfmenu-sub-indicator-hover:      #{$color-j4-cool-gray};
+    --color-sfmenu-ul-bg:                    #{$color-i2-navy};
   }
 }
 
@@ -83,7 +85,6 @@ ul[id^="superfish-"][id$="-main"]{
     border: 1px solid transparent;
     line-height: var(--menu-item-line-height);
     .sf-sub-indicator{
-      overflow: initial;
       top: 33%;
       right: 16px;
       &:after{
@@ -125,7 +126,7 @@ ul[id^="superfish-"][id$="-main"]{
     }
   }
   ul{
-    background-color: var(--color-local-tasks-tabs-ul-bg);
+    background-color: var(--color-sfmenu-ul-bg);
     a,a:link{
       .sf-sub-indicator{
         top: 43%;
@@ -137,7 +138,6 @@ ul[id^="superfish-"][id$="-main"]{
 
 // start - local tasks tabs
 :root{
-  --color-local-tasks-tabs-ul-bg:          #{$color-i6-navy};
   --color-local-tasks-tabs-focus-fg:       #{$color-j1-cool-gray};
   --color-local-tasks-tabs-focus-bg:       #{$color-l6-yellow};
   --color-local-tasks-tabs-focus-accent:   #{$color-l2-yellow};
@@ -148,7 +148,6 @@ ul[id^="superfish-"][id$="-main"]{
 }
 @media (prefers-color-scheme: dark) {
   :root{
-    --color-local-tasks-tabs-ul-bg:          #{$color-i2-navy};
     --color-local-tasks-tabs-focus-fg:       #{$color-l6-yellow};
     --color-local-tasks-tabs-focus-bg:       #{$color-l1-yellow};
     --color-local-tasks-tabs-focus-accent:   #{$color-l4-yellow};
