--- a/sass/_content-type-article.scss
+++ b/sass/_content-type-article.scss
@@ -15,7 +15,7 @@
       margin-top: 0;
       margin-bottom: var(--space-s);
       a{
-        @include block-link;
+        // @include block-link;
       }
     }
   }
