--- a/sass/_objects-links.scss
+++ b/sass/_objects-links.scss
@@ -41,6 +41,7 @@ Not all link styles are defined in this file.
 }
 
 
+/*
 @mixin block-link(){
   display: block;
   text-decoration: none;
@@ -53,8 +54,7 @@ Not all link styles are defined in this file.
   }
   &:focus{
     color: var(--color-text);
-    background-color: var(--color-link-block-focus-bg);
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid var(--color-link-border-focus);
     outline: none;
   }
   &:hover{
@@ -67,3 +67,4 @@ Not all link styles are defined in this file.
     border-bottom: 1px solid transparent;
   }
 }
+*/
